# opengl-course

hw1_fractal/: README.md  main.cpp
hw1_fractal/assets/: simple-shader.fs
hw2/: CMakeLists.txt  README.md  conanfile.txt
hw2/includes/util/: mesh.h  model.h  shader_m.h
hw2/shaders/: object.fs  object.vs
hw2/src/: HW2_cubemap.cpp
hw3/: CMakeLists.txt  build_and_run.sh  conanfile.txt  run.sh
hw3/assets/shaders/: land_shader.fs  land_shader.vs  model_shader.fs  model_shader.vs  simple_shader.vs  water_shader.fs  water_shader.vs
hw3/includes/util/: camera.h  mesh.h  model.h  shader_s.h
hw3/src/: boat.h  camera.h  cubemap.h  land.h  lighthouse.h  loaders.h  main.cpp  opengl_shader.h  projector.h  scene.h  sun.h
